--- a/csproj File/bypass.csproj
+++ b/csproj File/bypass.csproj
@@ -40,6 +40,9 @@
 
                     public static int BypassAMSI()
                     {
+			Console.WriteLine("Author: Shelldon");
+			Console.WriteLine("github: github.com/Sh3lldon");
+			Console.WriteLine("!!!! Please do not use in unethical hacking and follow all rules and regulations of laws!!!!");
 
                         Process[] processes = Process.GetProcessesByName("powershell");
                         if (processes.Length != 0)
